--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -17,3 +17,14 @@ knitr::opts_chunk$set(
 ```{r setup}
 library(zitools)
 ```
+
+```{r}
+data(mtx)
+Zi <- ziMain(mtx)
+
+
+```
+
+```{r}
+boxplot(log1p(Zi))
+```
