--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -31,6 +31,7 @@ Step one: load required packages
 ```{r}
 library(zitools)
 library(phyloseq)
+library(DESeq2)
 ```
 
 ## ziMain function
@@ -55,7 +56,7 @@ Plotting the zero-inflated input counts for comparison illustrates the effect of
 
 ```{r}
 boxplot(log2p(res_ps)) # deinflated counts
-boxplot(log2p(res_ps@inputcounts)) # plotting zero-inflated counts
+boxplot(log2p(inputcounts(res_ps))) # plotting zero-inflated counts
 
 heatmap(res_ps, Rowv=NULL, Colv=NULL)
 ```
@@ -64,7 +65,7 @@ Plotting boxes for each feature can easily be done by applying transpose
 
 ```{r}
 boxplot(t(res_ps))
-boxplot(t(res_ps@deinflatedcounts)) # equivalent
+boxplot(t(deinflatedcounts(res_ps))) # equivalent
 ```
 
 Individual data points can be plotted by the overloaded generic plot function:
@@ -77,7 +78,7 @@ plot(res_ps,xlab="First sample [counts]",ylab="Second sample [counts]") # equiva
 Plotting all data points:
 
 ```{r}
-plot(as.vector(Zi@deinflatedcounts),xlab="Index",ylab="counts")
+plot(as.vector(deinflatedcounts(res_ps)),xlab="Index",ylab="counts")
 ```
 
 ### Principal component analysis (PCA)
@@ -94,7 +95,7 @@ princomp(covmat=cor(Zi))
 ### Differential Abundance Analysis - with weights
 
 ```{r}
-deseq_zi <- zi_to_deseq2(res_ps, ~disease_stat)
+dds_zi <- zi2deseq2(res_ps, ~DiseaseState)
 dds_zi <-  DESeq(dds_zi, test = "Wald", fitType = "local", sfType = "poscounts")
 
 plotMA(dds_zi)
@@ -115,7 +116,7 @@ df_res_zi <- df_res_zi %>%
 ### Differential Abundance Analysis - without weights
 
 ```{r}
-deseq <- phyloseq_to_deseq2(ps, ~disease_stat)
+deseq <- phyloseq_to_deseq2(ps, ~DiseaseState)
 dds <-  DESeq(deseq, test = "Wald", fitType = "local", sfType = "poscounts")
 
 res <- results(dds, cooksCutoff = FALSE)
