change Vignette Header

--- a/vignettes/zitools_tutorial.Rmd
+++ b/vignettes/zitools_tutorial.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "An Introduction to zitools"
-output: BiocStyle::html_document
+output: BiocStyle::pdf_document
 vignette: >
   %\VignetteIndexEntry{An Introduction to zitools}
   %\VignetteEngine{knitr::rmarkdown}
